microservice/20_limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  selector:
    matchLabels:
      app: queue
  replicas: 1
  # replicas: 3
  template: # template for the pods
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: queue
        image: richardchesterwood/k8s-fleetman-queue:release2
        resources: 
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 500Mi #container will kill and up new container by pod if limit exceed. 
            cpu: 200m     # k8 not allowed to exceed this limit. - not killing.
