microservice/26_1_workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator-config-map
spec:
  selector:
    matchLabels:
      app: position-simulator-config-map
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: position-simulator-config-map
    spec:
      containers:
      - name: position-simulator
        image: richardchesterwood/k8s-fleetman-position-simulator:release1
