microservice/26_4_workload_volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator-config-map
spec:
  selector:
    matchLabels:
      app: position-simulator-config-map
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: position-simulator-config-map
    spec:
      containers:
      - name: position-simulator
        image: richardchesterwood/k8s-fleetman-position-simulator:release1
        volumeMounts: 
        - name: database-config-volume
          mountPath: /etc/any/directory/config   # this folder create in inside of container. 
      volumes:
      - name: database-config-volume
        configMap:
          name: global-database-config-v4
