microservice/27_ingress.yaml
# from v1.14 of k8s
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
spec:
  rules:
    - host: k8-learn.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
